# novadoom-odamex

./: .gitattributes  .gitignore  .gitmodules  .mailmap  3RD-PARTY-LICENSES  CLAUDE.md  CMakeLists.txt  Doxyfile  GAME_SETTINGS.md  GitVersion.yml  MAINTAINERS  NOVADOOM_BUILD_PLAN.md  PLATFORM_INTEGRATION.md  README  README.md  REBRANDING.md  novadoom-installed.txt  switch.cmake
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  change-request.md  feature-request.md  question.md
.github/workflows/: linux-rc.yml  linux.yml  macos.yml  novadoom-release.yml  release-upversion.yml  release.yml  windows-rc.yml  windows-release.yml  windows.yml
Xbox/: README.Xbox  i_xbox.cpp  i_xbox.h
ag-odalaunch/: CMakeLists.txt
ag-odalaunch/Xbox/: xbox_api.h  xbox_main.cpp  xbox_main.h
ag-odalaunch/res/: Info.plist  build.bat  build.sh
ag-odalaunch/src/: agol_about.cpp  agol_dirsel.cpp  agol_dirsel.h  agol_main.cpp  agol_main.h  agol_manual.cpp  agol_manual.h  agol_settings.cpp  agol_settings.h  agol_solo.cpp  agol_solo.h  event_handler.cpp  event_handler.h  game_command.cpp  game_command.h  gui_config.cpp  gui_config.h  icons.h  main.cpp  oda_thread.h  typedefs.h
ci/: fedora-buildgen.sh  fedora.Dockerfile  macos-buildgen.sh  stage-inno-setup-and-run.ps1  ubuntu-artifact.sh  ubuntu-buildgen.sh  ubuntu-focal-buildgen.sh  ubuntu-focal.Dockerfile  upload-b2.py  win-artifact.ps1  win-get-demotester.ps1  win-prepare-demotest.ps1  win-release-x64.ps1  win-release-x86.ps1  win-x32-artifact.ps1  win-x32-buildgen.ps1
client/: CMakeLists.txt
client/fluid/: boot.fl
client/gui/: gui_boot.cpp  gui_boot.h  gui_common.cpp  gui_common.h  gui_resource.h  icon_novadoom_128.png.cpp
client/sdl/: SDLMain.m  client.rc.in  i_icon.h  i_input.cpp  i_input.h  i_input_sdl12.cpp  i_input_sdl12.h  i_input_sdl20.cpp  i_input_sdl20.h  i_input_sdl3.cpp  i_input_sdl3.h  i_main.cpp  i_midi.cpp  i_midi.h  i_music.cpp  i_music.h  i_musicsystem.cpp  i_musicsystem.h  i_musicsystem_adlmidi.cpp  i_musicsystem_adlmidi.h  i_musicsystem_au.cpp  i_musicsystem_au.h  i_musicsystem_fluidsynth.cpp  i_musicsystem_fluidsynth.h  i_musicsystem_portmidi.cpp  i_musicsystem_portmidi.h  i_musicsystem_sdl.cpp  i_musicsystem_sdl.h  i_sdl.h  i_sound.cpp  i_sound.h  i_system.cpp  i_system.h  i_video.cpp  i_video.h  i_video_sdl12.cpp  i_video_sdl12.h  i_video_sdl20.cpp  i_video_sdl20.h  i_video_sdl3.cpp  (+3 more)
client/src/: am_map.cpp  c_bind.cpp  c_bind.h  c_console.cpp  cl_ctf.cpp  cl_cvarlist.cpp  cl_demo.cpp  cl_demo.h  cl_download.cpp  cl_download.h  cl_game.cpp  cl_level.cpp  cl_main.cpp  cl_main.h  cl_maplist.cpp  cl_maplist.h  cl_mobj.cpp  cl_netgraph.cpp  cl_netgraph.h  cl_parse.cpp  cl_parse.h  cl_pred.cpp  cl_replay.cpp  cl_replay.h  cl_responderkeys.cpp  cl_responderkeys.h  cl_stubs.cpp  cl_vote.cpp  cl_vote.h  d_main.cpp  d_net.cpp  d_netinfo.cpp  f_finale.cpp  f_finale.h  f_wipe.cpp  f_wipe.h  g_musinfo.cpp  hu_drawers.cpp  hu_elements.cpp  hu_mousegraph.cpp  (+40 more)
client/switch/: README.md
client/vwii/: i_wii.cpp  i_wii.h  net_print.cpp  net_print.h
cmake/modules/: GetGitLastTag.cmake  GetGitRevisionNumberFromSource.cmake  MacOSXBundleInfo.plist.in  NovaDoomCopyLibs.cmake  NovaDoomCopyWad.cmake  NovaDoomTargetSettings.cmake  NovalaunchCopyLibs.cmake  OdamexCopyLibs.cmake  OdamexTargetSettings.cmake
common/: GitVersion.yml  actor.h  am_map.cpp  am_map.h  c_console.h  c_cvarlist.cpp  c_cvars.cpp  c_cvars.h  c_dispatch.cpp  c_dispatch.h  c_doc.cpp  c_effect.cpp  c_effect.h  c_maplist.h  c_pch.h  c_vote.cpp  c_vote.h  cmdlib.cpp  cmdlib.h  com_misc.cpp  com_misc.h  d_dehacked.cpp  d_dehacked.h  d_event.h  d_items.cpp  d_items.h  d_main.cpp  d_main.h  d_net.h  d_netcmd.cpp  d_netcmd.h  d_netinf.h  d_player.h  d_ticcmd.h  dobject.cpp  dobject.h  doom_obj_container.h  doomdata.h  doomdef.h  doomfunc.h  (+211 more)
config-samples/: coop-all-official-wads.cfg  coop-doom.cfg  coop-masterlevels.cfg  coop-modern.cfg  coop-zdoom.cfg  ctf-attackdefend.cfg  ctf-doom.cfg  ctf-pub.cfg  ctf-wdl.cfg  dm-doom.cfg  dm-iddm1.cfg  dm-modern.cfg  dm-zdoom.cfg  duel-altdeath.cfg  duel-ddl.cfg  duel-doom.cfg  duel-zddl.cfg  duel-zdoom.cfg  horde-doom.cfg  horde-modern.cfg  horde-zdoom.cfg  lms-2team.cfg  lms-3team.cfg  lms-ffa.cfg  survival-modern.cfg  tdm-doom.cfg  tdm-modern.cfg  tdm-zdoom.cfg
docker/: Dockerfile  Makefile
docker/docker-files/: entrypoint.sh  novadoom-server.sh
docker/examples/: .env  .env.example  docker-compose.yml  run.sh
docs/: RCON_INTEGRATION_GUIDE.md  WAD_DOWNLOAD_SYSTEM.md  client-url-protocol-feature-request.md
installer/arch/: PKGBUILD  novadoom.desktop  (+2 more)
libraries/: CMakeLists.txt  SDL-lib.cmake  cpptrace-lib.cmake  curl-lib.cmake  fltk-lib.cmake  fmt-lib.cmake  jsoncpp-lib.cmake  libadlmidi-lib.cmake  libpng-lib.cmake  miniupnp-lib.cmake  protobuf-lib.cmake  scnlib-lib.cmake  wxWidgets-lib.cmake  zlib-lib.cmake
libraries/fluidsynth/: CMakeLists.txt
master/: CMakeLists.txt  i_net.cpp  i_net.h  main.cpp
master/nodejs/: nomaster.js
media/: novasrv.icns
odalaunch/: CMakeLists.txt
odalpapi/: net_error.cpp  net_error.h  net_io.cpp  net_io.h  net_packet.cpp  net_packet.h  net_utils.cpp  net_utils.h  typedefs.h
odaproto/: CMakeLists.txt  common.proto  server.proto
scripts/: update-version.sh
server/: CMakeLists.txt
server/src/: am_map.cpp  c_console.cpp  d_main.cpp  d_netinfo.cpp  g_musinfo.cpp  i_main.cpp  i_system.cpp  i_system.h  m_misc.cpp  r_main.cpp  r_plane.cpp  r_sky.cpp  s_sound.cpp  sv_banlist.cpp  sv_banlist.h  sv_ctf.cpp  sv_cvarlist.cpp  sv_game.cpp  sv_level.cpp  sv_main.cpp  sv_main.h  sv_maplist.cpp  sv_maplist.h  sv_master.cpp  sv_master.h  sv_mobj.cpp  sv_pickup.cpp  sv_rproto.cpp  sv_sqp.cpp  sv_sqp.h  sv_sqpold.cpp  sv_sqpold.h  sv_stats.cpp  sv_stats.h  sv_stubs.cpp  sv_vote.cpp  sv_vote.h  v_palette.cpp
server/win32/: server.rc.in
tests/: 255players.tcl  demolist.tcl  tmp
wad/: CMakeLists.txt  wadinfo.txt
wad/lumps/: _chxhack.lmp  _dep2int.lmp  _dep3int.lmp  dslastpl.lmp  dsvtfail.lmp  dsvtno.lmp  dsvtpass.lmp  dsvtstrt.lmp  language.lmp  obossmap.lmp  sndinfo.lmp
(+500 files in other folders)
